# duck-engine

./: .gitignore  .ninja_deps  .ninja_log  CMakeLists.txt  Makefile  README.md
examples/: Scene1.xml
include/core/: core.h  debug.h  engine.h  exceptions.h  gameObject.h  scene.h  version.h  window.h
include/exceptions/: MemoryLeakException.h  exception.h  exceptions.h  invalidAccessException.h  invalidArgumentException.h  memoryAllocationException.h  memoryException.h  notImplementedException.h  xmlParseException.h
include/graphics/: dimension.h  types.h
include/logging/: logging.h
include/script/: c.h
include/serialization/: json.h  xml.h
include/utils/: utils.h
src/: main.cpp
src/core/: core.cpp  debug.cpp  gameObject.cpp  scene.cpp
src/exceptions/: exceptions.cpp
src/graphics/: types.cpp
src/logging/: logging.cpp
